Update settings with URL variable

--- a/.gitignore
+++ b/.gitignore
@@ -129,7 +129,13 @@ dmypy.json
 .pyre/
 
 # Local info notes
-Project-README.md
+Task1-README.md
+Task2-README.md
+Task3-README.md
+Task4-README.md
+Task5-README.md
+Task6-README.md
+Task7-README.md
 
 
 
