--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url = "https://bknlgo-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai"
-sentiment_analyzer_url="https://sentianalyzer.1jll4zshphzk.us-south.codeengine.appdomain.cloud/"
+sentiment_analyzer_url="https://sentianalyzer.1jpbrlu07zo0.us-south.codeengine.appdomain.cloud/"
